New things: - prettier config and ignore - use openapi - add error handling

--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -1,23 +1,9 @@
-<header
-  class="d-flex flex-md-row align-items-center justify-content-between p-3 px-md-4 mb-3 bg-white border-bottom box-shadow fixed-top shadow-sm"
->
-  <img
-    class="logo"
-    src="/assets/images/logo.png"
-    alt="logo"
-    style="max-height: 70px"
-    routerLink="/"
-  />
+<header class="d-flex flex-md-row align-items-center justify-content-between p-3 px-md-4 mb-3 bg-white border-bottom box-shadow fixed-top shadow-sm">
+  <img class="logo" src="/assets/images/logo.png" alt="logo" style="max-height: 70px" routerLink="/" />
   <nav class="my-2 text-uppercase fs-4 my-md-0 mr-md-3">
-    <a
-      class="p-2"
-      routerLink="/"
-      routerLinkActive="active"
-      [routerLinkActiveOptions]="{ exact: true }"
-      >Home</a
-    >
+    <a class="p-2" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Home</a>
     <a class="p-2" routerLink="/shop" routerLinkActive="active">Shop</a>
-    <a class="p-2" routerLink="/contact" routerLinkActive="active">Contact</a>
+    <a class="p-2" routerLink="/test-error" routerLinkActive="active">Error</a>
   </nav>
   <div class="d-flex align-items-center">
     <a href="" class="position-relative">
