--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -1,9 +1,5 @@
 <div class="card h-100 mb-4 box-shadow" *ngIf="product">
-  <img
-    [src]="product.pictureUrl"
-    [alt]="product.name"
-    class="img-fluid bg-info"
-  />
+  <img [src]="product.pictureUrl" [alt]="product.name" class="img-fluid bg-info" />
   <div class="card-body d-flex flex-column">
     <a href="" class="text-decoration-none">
       <h6 class="text-uppercase">
@@ -13,15 +9,8 @@
     <span class="mb-2">{{ product.price | currency }}</span>
 
     <div class="btn-group mt-auto">
-      <button
-        class="btn btn-outline-secondary fa fa-shopping-cart me-2"
-      ></button>
-      <button
-        class="btn btn-outline-secondary"
-        routerLink="/shop/{{ product.id }}"
-      >
-        View
-      </button>
+      <button class="btn btn-outline-secondary fa fa-shopping-cart me-2"></button>
+      <button class="btn btn-outline-secondary" routerLink="/shop/{{ product.id }}">View</button>
     </div>
   </div>
 </div>
