--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,7 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+// regular style toast
+@import 'ngx-toastr/toastr';
 
 /* Importing Bootstrap SCSS file. */
-@import "./node_modules/bootstrap/scss/bootstrap";
+@import './node_modules/bootstrap/scss/bootstrap';
 
 /* Importing Datepicker SCSS file. */
-@import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
+@import 'node_modules/ngx-bootstrap/datepicker/bs-datepicker';
