--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,5 @@
+<ngx-spinner><p style="color: white">Loading...</p></ngx-spinner>
 <app-nav-bar></app-nav-bar>
-<div class="container" style="margin-top: 140px">
-  <router-outlet></router-outlet>
-</div>
+<app-section-header></app-section-header>
+<router-outlet></router-outlet>
+<div class="container"></div>
