--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -2,8 +2,9 @@
 // regular style toast
 @import 'ngx-toastr/toastr';
 
-/* Importing Bootstrap SCSS file. */
-@import './node_modules/bootstrap/scss/bootstrap';
-
 /* Importing Datepicker SCSS file. */
 @import 'node_modules/ngx-bootstrap/datepicker/bs-datepicker';
+
+label.xng-breadcrumb-trail {
+  color: orange;
+}
