--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -8,11 +8,42 @@
   <div class="d-flex align-items-center">
     <a routerLink="/basket" class="position-relative">
       <i class="fa fa-shopping-cart fa-2x me-5 text-dark"></i>
-      <div *ngIf="(basketService.basketSource$ | async) as basket" class="cart-no"> 
-        {{getCount(basket.items)}}
+      <div *ngIf="basketService.basketSource$ | async as basket" class="cart-no">
+        {{ getCount(basket.items) }}
       </div>
     </a>
-    <a href="" class="btn btn-outline-secondary me-2">Login</a>
-    <a href="" class="btn btn-outline-secondary me-2">Sign up</a>
+    <ng-container *ngIf="(accountSerice.currentUser$ | async) === null">
+      <a routerLink="/account/login" class="btn btn-outline-secondary me-2">Login</a>
+      <a routerLink="/account/register" class="btn btn-outline-secondary me-2">Sign up</a>
+    </ng-container>
+
+    <ng-container *ngIf="accountSerice.currentUser$ | async as user">
+      <div class="dropdown ms-3 me-5" style="cursor: pointer" dropdown>
+        <a dropdownToggle class="dropdown-toogle">
+          <strong>Welcome {{ user.displayName }}</strong>
+        </a>
+        <ul *dropdownMenu class="dropdown-menu dropdown-menu-right">
+          <li class="py-1">
+            <a routerLink="/basket" class="dropdown-item">
+              <i class="fa fa-shopping-cart me-3"></i>
+              View basket
+            </a>
+          </li>
+          <li class="py-1">
+            <a routerLink="/orders" class="dropdown-item">
+              <i class="fa fa-history me-3"></i>
+              View orders
+            </a>
+          </li>
+          <div class="dropdown-divider"></div>
+          <li class="py-1">
+            <a (click)="accountSerice.logout()" class="dropdown-item">
+              <i class="fa fa-sign-out me-3"></i>
+              Logout
+            </a>
+          </li>
+        </ul>
+      </div>
+    </ng-container>
   </div>
 </header>
