Add eslint, jest. Delete karma. Format all files.

--- a/client/src/app/shared/components/stepper/stepper.component.html
+++ b/client/src/app/shared/components/stepper/stepper.component.html
@@ -2,7 +2,13 @@
   <ul class="nav nav-pills nav-justified">
     <li class="nav-item" *ngFor="let step of steps; let i = index">
       <div class="d-grid">
-        <button [disabled]="true" class="nav-link py-3 text-uppercase fw-bold" (click)="onClick(i)" [class.active]="selectedIndex === i">{{ step.label }}</button>
+        <button
+          [disabled]="true"
+          class="nav-link py-3 text-uppercase fw-bold"
+          (click)="onClick(i)"
+          [class.active]="selectedIndex === i">
+          {{ step.label }}
+        </button>
       </div>
     </li>
   </ul>
