--- a/client/src/app/shared/pager/pager.component.html
+++ b/client/src/app/shared/pager/pager.component.html
@@ -1,1 +1,12 @@
-<pagination *ngIf="totalCount && pageSize" [ngModel]="pageNumber" [boundaryLinks]="true" [totalItems]="totalCount" [itemsPerPage]="pageSize" [maxSize]="10" (pageChanged)="onPagerChanged($event)" previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;"></pagination>
+<pagination
+  *ngIf="totalCount && pageSize"
+  [ngModel]="pageNumber"
+  [boundaryLinks]="true"
+  [totalItems]="totalCount"
+  [itemsPerPage]="pageSize"
+  [maxSize]="10"
+  (pageChanged)="onPagerChanged($event)"
+  previousText="&lsaquo;"
+  nextText="&rsaquo;"
+  firstText="&laquo;"
+  lastText="&raquo;"></pagination>
