--- a/client/src/app/account/login/login.component.html
+++ b/client/src/app/account/login/login.component.html
@@ -5,11 +5,21 @@
         <h1 class="mb-3">Login</h1>
       </div>
 
-      <app-text-input [formControl]="loginForm.controls['email']" [label]="'Email Address'"></app-text-input>
-      <app-text-input [formControl]="loginForm.controls['password']" [type]="'password'" [label]="'Password'"></app-text-input>
+      <app-text-input
+        [formControl]="loginForm.controls['email']"
+        [label]="'Email Address'"></app-text-input>
+      <app-text-input
+        [formControl]="loginForm.controls['password']"
+        [type]="'password'"
+        [label]="'Password'"></app-text-input>
 
       <div class="d-grid">
-        <button [disabled]="loginForm.invalid" class="btn btn-lg btn-primary mt-3" type="submit">Sign In</button>
+        <button
+          [disabled]="loginForm.invalid"
+          class="btn btn-lg btn-primary mt-3"
+          type="submit">
+          Sign In
+        </button>
       </div>
     </form>
   </div>
