--- a/client/src/app/account/register/register.component.html
+++ b/client/src/app/account/register/register.component.html
@@ -5,9 +5,16 @@
         <h1 class="mb-3">Sign up</h1>
       </div>
 
-      <app-text-input [formControl]="registerForm.controls['displayName']" [label]="'Display Name'"></app-text-input>
-      <app-text-input [formControl]="registerForm.controls['email']" [label]="'Email Address'"></app-text-input>
-      <app-text-input [formControl]="registerForm.controls['password']" [type]="'password'" [label]="'Password'"></app-text-input>
+      <app-text-input
+        [formControl]="registerForm.controls['displayName']"
+        [label]="'Display Name'"></app-text-input>
+      <app-text-input
+        [formControl]="registerForm.controls['email']"
+        [label]="'Email Address'"></app-text-input>
+      <app-text-input
+        [formControl]="registerForm.controls['password']"
+        [type]="'password'"
+        [label]="'Password'"></app-text-input>
 
       <ul class="text-danger list-unstyled" *ngIf="errors">
         <li *ngFor="let error of errors">
@@ -16,7 +23,12 @@
       </ul>
 
       <div class="d-grid">
-        <button [disabled]="registerForm.invalid" class="btn btn-lg btn-primary mt-3" type="submit">Sign up</button>
+        <button
+          [disabled]="registerForm.invalid"
+          class="btn btn-lg btn-primary mt-3"
+          type="submit">
+          Sign up
+        </button>
       </div>
     </form>
   </div>
