--- a/client/src/app/checkout/checkout-delivery/checkout-delivery.component.html
+++ b/client/src/app/checkout/checkout-delivery/checkout-delivery.component.html
@@ -2,7 +2,13 @@
   <h4 class="mb-3">Choose your delivery method</h4>
   <div class="row ml-5" formGroupName="deliveryForm">
     <div class="col-6 form-group" *ngFor="let method of deliveryMethods">
-      <input type="radio" id="{{ method.id }}" value="{{ method.id }}" formControlName="deliveryMethod" class="form-check-input" (click)="setShippingPrice(method)" />
+      <input
+        type="radio"
+        id="{{ method.id }}"
+        value="{{ method.id }}"
+        formControlName="deliveryMethod"
+        class="form-check-input"
+        (click)="setShippingPrice(method)" />
       <label for="{{ method.id }}" class="form-check-label ms-2 mb-3">
         <strong>{{ method.shortName }} - {{ method.price | currency }}</strong>
         <br />
@@ -12,12 +18,16 @@
   </div>
 </div>
 
-<div class="float-none d-flex justify-content-between flex-column flex-lg-row mb-5">
+<div
+  class="float-none d-flex justify-content-between flex-column flex-lg-row mb-5">
   <button class="btn btn-outline-primary" cdkStepperPrevious>
     <i class="fa fa-angle-left"></i>
     Back to Address
   </button>
-  <button [disabled]="checkoutForm?.get('deliveryForm')?.invalid" class="btn btn-primary" cdkStepperNext>
+  <button
+    [disabled]="checkoutForm?.get('deliveryForm')?.invalid"
+    class="btn btn-primary"
+    cdkStepperNext>
     Go to Review
     <i class="fa fa-angle-right"></i>
   </button>
