--- a/client/src/app/checkout/checkout-review/checkout-review.component.html
+++ b/client/src/app/checkout/checkout-review/checkout-review.component.html
@@ -2,7 +2,8 @@
   <app-basket-summary [isBasket]="false"></app-basket-summary>
 </div>
 
-<div class="float-none d-flex justify-content-between flex-column flex-lg-row mb-5">
+<div
+  class="float-none d-flex justify-content-between flex-column flex-lg-row mb-5">
   <button class="btn btn-outline-primary" cdkStepperPrevious>
     <i class="fa fa-angle-left"></i>
     Back to delivery
