--- a/client/src/app/orders/order-detailed/order-detailed.component.html
+++ b/client/src/app/orders/order-detailed/order-detailed.component.html
@@ -24,7 +24,11 @@
               <tr *ngFor="let item of order.orderItems">
                 <th scope="row">
                   <div class="p-2">
-                    <img src="{{ item.pictureUrl }}" alt="{{ item.productName }}" class="i mg-fluid" style="max-height: 50px" />
+                    <img
+                      src="{{ item.pictureUrl }}"
+                      alt="{{ item.productName }}"
+                      class="i mg-fluid"
+                      style="max-height: 50px" />
                     <div class="ml-3 d-inline-block align-middle">
                       <h5 class="mb-0">
                         {{ item.productName }}
@@ -48,7 +52,9 @@
       </div>
     </div>
     <div class="col-4">
-      <div class="bg-light px-4 py-3 text-uppercase font-weight-bold">Order summary</div>
+      <div class="bg-light px-4 py-3 text-uppercase font-weight-bold">
+        Order summary
+      </div>
       <div class="p-4">
         <ul class="list-unstyled mb-1">
           <li class="d-flex justify-content-between py-3 border-bottom">
