--- a/client/src/app/shared/paging-header/paging-header.component.html
+++ b/client/src/app/shared/paging-header/paging-header.component.html
@@ -3,7 +3,9 @@
     Showing
     <strong>
       {{ (pageNumber - 1) * pageSize + 1 }} -
-      {{ pageNumber * pageSize > totalCount ? totalCount : pageNumber * pageSize }}
+      {{
+        pageNumber * pageSize > totalCount ? totalCount : pageNumber * pageSize
+      }}
     </strong>
     of
     <strong>{{ totalCount }}</strong>
