--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -1,9 +1,16 @@
 <div class="card h-100 mb-4 box-shadow" *ngIf="product">
   <div class="image position-relative" style="cursor: pointer">
-    <img src="{{ product.pictureUrl }}" alt="{{ product.name }}" class="img-fluid bg-info" />
+    <img
+      src="{{ product.pictureUrl }}"
+      alt="{{ product.name }}"
+      class="img-fluid bg-info" />
     <div class="d-flex align-items-center justify-content-center hover-overlay">
-      <button class="btn btn-primary me-2" (click)="addItemToBasket()"><i class="fa fa-shopping-cart" aria-hidden="true"></i></button>
-      <button class="btn btn-primary" routerLink="/shop/{{ product.id }}">View</button>
+      <button class="btn btn-primary me-2" (click)="addItemToBasket()">
+        <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+      </button>
+      <button class="btn btn-primary" routerLink="/shop/{{ product.id }}">
+        View
+      </button>
     </div>
   </div>
 
