--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,7 @@
-<ngx-spinner><p style="color: white">Loading...</p></ngx-spinner>
+<ngx-spinner type="ball-scale-multiple"
+  ><p style="color: white">Loading...</p></ngx-spinner
+>
 <app-nav-bar></app-nav-bar>
 <app-section-header></app-section-header>
 <router-outlet></router-outlet>
-<div class="container"></div>
+<div class="container" data-testid="app-container"></div>
